[package]
name = "rusty-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-hal = "0.6.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.1"

